@@ -1,3 +1,5 @@
 
-..\apache-maven-3.0.5\bin\mvn
+java --add-exports java.base/java.lang=ALL-UNNAMED
+--add-exports java.desktop/sun.awt=ALL-UNNAMED
+--add-exports java.desktop/sun.java2d=ALL-UNNAMED 
 pause
